--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,11 @@
 version: 2
+registries:
+  docker-gcr:
+    - registry: gcr.io
 updates:
 - package-ecosystem: docker
   directory: /ingestion-beam
+  registries:
+    - docker-gcr
   schedule:
     interval: daily
